--- a/example/flutter_responsive_website/pubspec.yaml
+++ b/example/flutter_responsive_website/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   super_responsive:
     path: ../../
 
+  google_fonts: ^2.3.1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
