--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,11 @@
 name: super_responsive
-description: A new Flutter project.
+description: Utils and widgets to make your flutter apps and websites fully responsive.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 0.1.0
+
+repository: https://github.com/namzug16/super-responsive
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -12,8 +14,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +24,11 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+platforms:
+  android:
+  ios:
+  linux:
+  macos:
+  web:
+  windows:
