--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: super_responsive
 description: Utils and widgets to make your flutter apps and websites fully responsive.
 
-version: 0.1.2+1
+version: 0.1.3
 
 repository: https://github.com/namzug16/super-responsive
 
